Search Street geometry

--- a/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
+++ b/Source/MapSamples/MapSamples.Client/Layout/NavMenu.razor
@@ -72,6 +72,13 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="streetGeocoding">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
+                Street Geocoding
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="staticMap">
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span>
                 Static Map
