invalidate size. Version 0.20

--- a/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
+++ b/Source/MapSamples/MapSamples.Client/Pages/MapMethods.razor
@@ -41,6 +41,9 @@
         <div>
             Draggable <input type="checkbox" @bind="this.Draggable" />
         </div>
+        <div>
+            <button @onclick="this.InvalidateSize">Invalidate Size</button>
+        </div>
     </div>
 
     <div class="default-map-event-log">
